services mobile alignment fix

--- a/src/index.css
+++ b/src/index.css
@@ -734,6 +734,13 @@ width: 75%;
   grid-template-columns: repeat(2, 1fr);
 }
 
+@media(max-width:600px){
+  .services__container{
+    display: flex !important;
+    flex-direction: column;
+  }
+}
+
 .services__content {
   position: relative;
   background-color: var(--container-color);
